@@ -336,6 +336,11 @@ typedef struct tagOFNA {
 	DWORD lCustData;
 	LPOFNHOOKPROC lpfnHook;
 	LPCSTR lpTemplateName;
+#if (_WIN32_WINNT >= 0x0500)
+    void * pvReserved;
+    DWORD dwReserved;
+    DWORD FlagsEx;
+#endif // (_WIN32_WINNT >= 0x0500)
 } OPENFILENAMEA,*LPOPENFILENAMEA;
 typedef struct tagOFNW {
 	DWORD lStructSize;
