@@ -1,5 +1,11 @@
 2005-09-23	Chris Sutcliffe <ir0nh34d@users.sourceforge.net>
 
+	* include/commdlg.h (OPENFILENAME): Added WINNT >= 0x0500
+	component.
+	Thanks to: Gennady Feldman <gena01 at users dot sourceforge dot net>
+
+2005-09-23	Chris Sutcliffe <ir0nh34d@users.sourceforge.net>
+
 	* lib/shell32.def (SHILCreateFromPath): Add stub.
 	Thanks to: Michael Jung <mjung at iss dot tu-darmstadt dot de>
 
